# cwt

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  ROADMAP.md  bootstrap.sh  flake.nix  release-plz.toml
.cwt/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-tag.yml  ci.yml  release-plz.yml  release.yml
docs/: nix.md  verification.md
nix/: module.nix
scripts/: verify-verus.sh
src/: app.rs  main.rs
src/config/: mod.rs  model.rs
src/env/: container.rs  devcontainer.rs  mod.rs  ports.rs  resources.rs
src/forest/: config.rs  index.rs  mod.rs
src/git/: branch.rs  commands.rs  diff.rs  mod.rs
src/hooks/: event.rs  install.rs  mod.rs  socket.rs
src/orchestration/: broadcast.rs  dashboard.rs  dispatch.rs  import.rs  mod.rs
src/remote/: host.rs  mod.rs  session.rs  sync.rs
src/session/: launcher.rs  mod.rs  provider.rs  tracker.rs  transcript.rs
src/ship/: ci.rs  mod.rs  pipeline.rs  pr.rs
src/state/: mod.rs  store.rs
src/tmux/: pane.rs
src/ui/: help.rs  inspector.rs  layout.rs  mod.rs  repo_list.rs  status_bar.rs  theme.rs  worktree_list.rs
src/ui/dialogs/: broadcast.rs  create.rs  delete.rs  dispatch.rs  gc.rs  handoff.rs  mod.rs  restore.rs  ship.rs
src/worktree/: handoff.rs  manager.rs  mod.rs  model.rs  setup.rs  slug.rs  snapshot.rs
tests/: integration.rs  workflow_conformance.rs
verification/: ASSUMPTIONS.md  workflow.rs
