[package]
name = "cwt"
version = "0.1.0"
edition = "2021"
description = "Claude Worktree Manager — TUI for managing git worktrees with Claude Code"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
dirs = "5"
which = "7"
anyhow = "1"
thiserror = "2"

[profile.release]
lto = true
strip = true
