[package]
name = "cwt"
version = "0.2.3"
edition = "2021"
description = "Claude Worktree Manager — TUI for managing git worktrees with Claude Code"
license = "MIT"
repository = "https://github.com/0dragosh/cwt"
homepage = "https://github.com/0dragosh/cwt"
keywords = ["git", "worktree", "tui", "claude", "tmux"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
ratatui = "0.30"
crossterm = "0.29.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0.6"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.10.0"
dirs = "6.0.0"
which = "8.0.2"
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
